feat: доработан Swagger, добавлены структуры
